@@ -1,7 +1,5 @@
 package hu.martin.ems.core.config;
 
-import com.fasterxml.jackson.core.exc.StreamReadException;
-import com.fasterxml.jackson.databind.DatabindException;
 import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import hu.martin.ems.NeedCleanCoding;
@@ -18,6 +16,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.transaction.annotation.Transactional;
 
+import javax.annotation.PostConstruct;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
@@ -54,14 +53,14 @@ public class DataProvider {
             List<File> files = Files.walk(jsonsDirectory)
                     .filter(Files::isRegularFile)
                     .filter(path -> path.toString().toLowerCase().endsWith(".json"))
-                    .map(Path::toFile).collect(Collectors.toList());
+                    .map(Path::toFile).toList();
             files.forEach(v -> {
                 result.put(v.getName().substring(0, v.getName().length()-5) + ".sql", generateSqlFromJson(v));
             });
         }
         catch (IOException e){
+            log.error("IOException happened while creating sqls from the json files for database");
             e.printStackTrace();
-            //TODO
         }
         return result;
     }
@@ -77,11 +76,11 @@ public class DataProvider {
         if (directory.isDirectory()) {
             for (File file : directory.listFiles()) {
                 if (file.isFile() && !file.delete()) {
-                    System.err.println("Failed to delete file: " + file.getAbsolutePath());
+                    log.warn("Failed to delete file: " + file.getAbsolutePath());
                 }
             }
         } else {
-            System.err.println("Provided path is not a directory: " + directory.getAbsolutePath());
+            log.warn("Provided path is not a directory: " + directory.getAbsolutePath());
         }
     }
 
@@ -96,22 +95,13 @@ public class DataProvider {
         }
     }
 
-    private static String generateSqlFromJson(File jsonFile) {
+    public static String generateSqlFromJson(File jsonFile) {
         try{
             ObjectMapper om = new ObjectMapper();
             JsonFile json = om.readValue(jsonFile, JsonFile.class);
             return json.toSQL();
-        } catch (StreamReadException e) {
-            e.printStackTrace();
-            //TODO
-            return "";
-        } catch (DatabindException e) {
-            e.printStackTrace();
-            //TODO
-            return "";
         } catch (IOException e) {
-            e.printStackTrace();
-            //TODO
+            log.warn("Error occured while reading json file: " + jsonFile.getName());
             return "";
         }
     }
@@ -133,14 +123,17 @@ public class DataProvider {
             ObjectMapper om = new ObjectMapper();
             try {
                 JsonFile json = om.readValue(jsonFile, JsonFile.class);
-                List<String> required = json.required == null ? new ArrayList<>() : json.required;
-                if (json.required == null) {
+                List<String> required;
+                if(json.required == null) {
+                    required = new ArrayList<>();
                     logger.warn("The \"required\" field is misisng from json " + jsonFile.getName());
+                }
+                else{
+                    required = json.required;
                 }
 
                 List<File> requiredFiles = allFiles.stream()
-                        .filter(file -> required.contains(file.getName()))
-                        .collect(Collectors.toList());
+                        .filter(file -> required.contains(file.getName())).toList();
                 requiredFiles.forEach(v -> loadRequiredJsonAndSave(allFiles, v));
                 saveJsonToDatabase(jsonFile);
             } catch (JsonMappingException e) {
@@ -157,6 +150,7 @@ public class DataProvider {
             ObjectMapper objectMapper = new ObjectMapper();
 
             JsonFile json = objectMapper.readValue(jsonFile, JsonFile.class);
+            json.init();
             String sql = json.toSQL();
             entityTransaction.begin();
             em.createNativeQuery(sql).executeUpdate();
@@ -176,71 +170,71 @@ public class DataProvider {
         }
     }
 
-    @AllArgsConstructor
     @NoArgsConstructor
+    @AllArgsConstructor
     @Getter
     @Setter
     static class JsonFile {
         List<Map<String, Object>> data;
-        String object;
-        List<String> required;
+        String objectName;
+        ArrayList<String> required;
 
-        protected String toSQL() {
-            switch (object) {
-                case "Order":
-                    object = "orders";
-                    break;
-                case "User":
-                    object = "loginuser";
-                    break;
-                default:
-                    break;
-            }
-            if (data.size() > 0) {
-                List<String> res = new ArrayList<>();
-                List<String> keys = new ArrayList<>(data.get(0).keySet());
-                String fieldNames = String.join(", ", keys);
-                String baseSql = "INSERT INTO " + object + " (" + fieldNames + ") VALUES ";
-                for (Map<String, Object> obj : data) {
-                    List<String> valuesList = new ArrayList<>();
-                    for (String key : keys) {
-                        Object value = obj.get(key);
-                        if (value instanceof LinkedHashMap && ((LinkedHashMap<String, Object>) value).containsKey("refClass")) {
-                            LinkedHashMap<String, Object> valHashMap = (LinkedHashMap<String, Object>) value;
-                            valuesList.add(generateSelectSQLQuerry(valHashMap, key));
-                        } else {
-                            valuesList.add(value == null ? "NULL" : "'" + value.toString().replace("'", "\\u0027") + "'");
-                        }
-                    }
-                    String values = String.join(", ", valuesList);
-                    res.add("(" + values + ")");
-                }
-                return baseSql + String.join(", ", res);
-            } else {
-                return "";
+        @PostConstruct
+        public void init(){
+            this.objectName = fixObjectName(objectName);
+        }
+
+        private static String fixObjectName(String objectName){
+            switch (objectName) {
+                case "Order": return "orders";
+                case "User": return "loginuser";
+                default: return objectName;
             }
         }
 
-
-        private static String generateSelectSQLQuerry(LinkedHashMap<String, Object> reference, String columnName) {
-            String refClass = (String) reference.get("refClass");
-            switch (refClass) {
-                case "Order":
-                    refClass = "orders";
-                    break;
-                case "User":
-                    refClass = "loginuser";
-                    break;
-                default:
-                    break;
+        protected String toSQL() {
+            if (data.isEmpty()) {
+                return "";
             }
-            @SuppressWarnings("unchecked")
+
+            List<String> keys = new ArrayList<>(data.get(0).keySet());
+            String fieldNames = String.join(", ", keys);
+            String baseSql = "INSERT INTO " + objectName + " (" + fieldNames + ") VALUES\n";
+            List<String> valueRows = data.stream()
+                    .map(obj -> buildValuesRow(obj, keys))
+                    .collect(Collectors.toList());
+
+            return baseSql + String.join(",\n", valueRows);
+        }
+
+        private String buildValuesRow(Map<String, Object> obj, List<String> keys) {
+            List<String> valuesList = keys.stream()
+                    .map(key -> formatValue(obj.get(key), key))
+                    .collect(Collectors.toList());
+
+            return "\t(" + String.join(", ", valuesList) + ")";
+        }
+
+        private String formatValue(Object value, String key) {
+            if (value instanceof LinkedHashMap && ((LinkedHashMap<?, ?>) value).containsKey("refClass")) {
+                return generateSelectSQLQuery((LinkedHashMap<String, Object>) value, key);
+            }
+            return value == null ? "NULL" : "'" + value.toString().replace("'", "\\u0027") + "'";
+        }
+
+        private static String generateSelectSQLQuery(LinkedHashMap<String, Object> reference, String columnName) {
+            String refClass = fixObjectName((String) reference.get("refClass"));
             LinkedHashMap<String, Object> filter = (LinkedHashMap<String, Object>) reference.get("filter");
-            String sql = "(SELECT id as " + columnName + " FROM " + refClass + " WHERE ";
 
-            sql += filter.entrySet().stream().map(v -> v.getKey() + " " + (v.getValue() instanceof String ? "ilike" : "=") + " '" + v.getValue() + "'").collect(Collectors.joining(" AND "));
+            String conditions = filter.entrySet().stream()
+                    .map(entry -> buildConditionForSelect(entry.getKey(), entry.getValue()))
+                    .collect(Collectors.joining(" AND "));
 
-            return sql + " LIMIT 1)";
+            return "(SELECT id as " + columnName + " FROM " + refClass + " WHERE " + conditions + " LIMIT 1)";
+        }
+
+        private static String buildConditionForSelect(String key, Object value) {
+            return key + (value instanceof String ? " ILIKE \'" + value + "\'" : " = " + value);
         }
     }
 }
